# pat-dealloc

./: .gitignore  Cargo.toml  Makefile  README.md  pat_dealloc.c
module/: .gitignore  Makefile  pat_dealloc.c
package/: PKGBUILD
pat-dealloc/: Cargo.toml
pat-dealloc-bin/: Cargo.toml
pat-dealloc-bin/src/: cli.rs  main.rs
pat-dealloc/src/: lib.rs  pat.rs  pci.rs
src/: cli.rs  main.rs
