[workspace.package]
version = "0.0.0-dev" # patched by CI
edition = "2021"

[workspace]
resolver = "2"

members = [
	"pat-dealloc",
	"pat-dealloc-bin",
]

[workspace.dependencies]
clap = "4.5.4"
color-eyre = "0.6.3"
log = "0.4.21"
nix = "0.28.0"
stderrlog = "0.6.0"

[profile.release]
strip = true
lto = true
