[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

members = [
	"pat-dealloc",
	"pat-dealloc-bin",
]

[workspace.dependencies]
anyhow = "1.0.81"
clap = "4.5.4"
color-eyre = "0.6.3"
lazy_static = "1.4.0"
log = "0.4.21"
nix = "0.28.0"
regex = "1.10.4"
stderrlog = "0.6.0"
thiserror = "1.0.58"

[profile.release]
lto = true
