[package]
name = "pat-dealloc-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pat-dealloc"
path = "src/main.rs"

[dependencies]
pat-dealloc = { path = "../pat-dealloc" }

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
log.workspace = true
nix = { workspace = true, features = ["user"] }
stderrlog.workspace = true
